SERVER-21931 Only mark chunks as jumbo on CannotSplit errors