src/mongo/db/s/balancer/balancer.cpp
@@ -629,7 +629,26 @@ void Balancer::_splitOrMarkJumbo(OperationContext* opCtx,
             Grid::get(opCtx)->getBalancerConfiguration()->getMaxChunkSizeBytes(),
             boost::none));
 
-        uassert(ErrorCodes::CannotSplit, "No split points found", !splitPoints.empty());
+        if (splitPoints.empty()) {
+            log() << "Marking chunk " << redact(chunk.toString()) << " as jumbo.";
+            chunk.markAsJumbo();
+
+            const std::string chunkName = ChunkType::genID(nss, chunk.getMin());
+
+            auto status = Grid::get(opCtx)->catalogClient()->updateConfigDocument(
+                opCtx,
+                ChunkType::ConfigNS,
+                BSON(ChunkType::name(chunkName)),
+                BSON("$set" << BSON(ChunkType::jumbo(true))),
+                false,
+                ShardingCatalogClient::kMajorityWriteConcern);
+            if (!status.isOK()) {
+                log() << "Couldn't set jumbo for chunk: " << redact(chunkName)
+                      << causedBy(redact(status.getStatus()));
+            }
+
+            return;
+        }
 
         uassertStatusOK(
             shardutil::splitChunkAtMultiplePoints(opCtx,
@@ -640,23 +659,6 @@ void Balancer::_splitOrMarkJumbo(OperationContext* opCtx,
                                                   ChunkRange(chunk.getMin(), chunk.getMax()),
                                                   splitPoints));
     } catch (const DBException&) {
-        log() << "Marking chunk " << redact(chunk.toString()) << " as jumbo.";
-
-        chunk.markAsJumbo();
-
-        const std::string chunkName = ChunkType::genID(nss, chunk.getMin());
-
-        auto status = Grid::get(opCtx)->catalogClient()->updateConfigDocument(
-            opCtx,
-            ChunkType::ConfigNS,
-            BSON(ChunkType::name(chunkName)),
-            BSON("$set" << BSON(ChunkType::jumbo(true))),
-            false,
-            ShardingCatalogClient::kMajorityWriteConcern);
-        if (!status.isOK()) {
-            log() << "Couldn't set jumbo for chunk: " << redact(chunkName)
-                  << causedBy(redact(status.getStatus()));
-        }
     }
 }
 
